[package]
name = "audio_chat"
version = "2.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
cpal = "0.15"
prost = "0.12"
log = "0.4"
fast_log = "1.6"
kanal = "0.1.0-pre8"
rubato = "0.14"
nnnoiseless = "0.5"
atomic_float = "0.1"
ctr = "0.9"
aes = "0.8"
x25519-dalek = { version = "2.0", features = ["getrandom"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hkdf = "0.13.0-pre.3"
sha2 = "0.11.0-pre.3"
hex-literal = "0.4"
rayon = "1.8"
rand = "0.8"
base64 = "0.21"
itertools = "0.12"
flutter_rust_bridge = "=2.0.0-dev.24"
parking_lot = "0.12.1"
lazy_static = "1.4"
uuid = { version = "1.7", features = ["v4"] }

[build-dependencies]
prost-build = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
