[package]
name = "audio_chat"
version = "2.4.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
cpal = "0.15"
prost = "0.12"
log = "0.4"
fast_log = "1.6"
kanal = "0.1.0-pre8"
rubato = "0.15"
nnnoiseless = { version = "0.5", default-features = false }
atomic_float = "1.0"
rayon = "1.10"
rand = "*"
flutter_rust_bridge = "=2.0.0"
parking_lot = "0.12"
lazy_static = "1.4"
uuid = { version = "1.8", features = ["v4"] }
bytes = "1.6"
async-throttle = "0.3"
libp2p = { version = "0.53.2", features = ["tokio", "quic", "tcp", "ping", "dcutr", "relay", "identify", "macros", "noise", "yamux", "autonat"] }
libp2p-stream = "0.1.0-alpha.1"
gag = "1.0"
chrono = "*"

[build-dependencies]
prost-build = "0.12"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wingdi", "windef", "minwindef", "winnt", "libloaderapi"] }
gdiplus-sys2 = { path = "../gdiplus-sys" }
widestring = "1.1"
