[package]
name = "audio_chat"
version = "2.4.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
messages = { path = "../messages" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
cpal = "0.15"
prost = "0.13"
log = "0.4"
fast_log = "1"
kanal = "0.1.0-pre8"
rubato = "0.16"
nnnoiseless = { version = "0.5", default-features = false }
atomic_float = "1"
rayon = "1"
flutter_rust_bridge = "=2.8.0"
parking_lot = "0.12"
lazy_static = "1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
async-throttle = "0.3"
libp2p = { version = "0.55", features = ["tokio", "quic", "tcp", "ping", "dcutr", "identify", "macros", "noise", "yamux", "autonat", "relay"] }
libp2p-stream = { version = "0.3.0-alpha" }
gag = "1"
chrono = "*"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wingdi", "windef", "minwindef", "winnt", "libloaderapi"] }
gdiplus-sys2 = { path = "../gdiplus-sys" }
widestring = "1.1"
