[package]
name = "common"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctr = "0.9"
aes = "0.8"
x25519-dalek = { version = "2.0", features = ["getrandom"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
chrono = "0.4"
tokio = { version = "1.37", features = ["io-util"] }
hex-literal = "0.4"
hkdf = "0.13.0-pre.3"
sha2 = "0.11.0-pre.3"
prost = "0.12"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures = { version = "0.3", default-features = false, features = ["std"] }
rsntp = "4.0"
log = "0.4"
rand = "0.8"

[build-dependencies]
prost-build = "0.12"