[package]
name = "gdiplus-sys2"
version = "0.1.1"
edition = "2021"
authors = ["David Rios <david.rios.gomes@gmail.com>"]
license = "MIT"
description = "Raw FFI bindings for GDI+"
repository = "https://github.com/davidrios/gdiplus-sys"
readme = "README.md"
keywords = ["windows", "ffi", "win32", "gdiplus", "gdip"]
categories = ["external-ffi-bindings", "no-std", "os::windows-apis"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/build.rs", "/README.md"]

[dependencies]
winapi = { version = "0.3", features = ["commctrl", "vcruntime", "windef", "wingdi", "wtypes", "basetsd", "ntdef"] }

[build-dependencies]
bindgen = "0.69.4"