[package]
name = "match_maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
log = "*"
tokio-util = { version = "0.7", features = ["codec"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["getrandom"] }
simple-logging = "2.0"
kanal = "0.1.0-pre8"
common = { path = "../common" }
async-throttle = "0.3"