[package]
name = "relay_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.55", features = ["tokio", "quic", "tcp", "ping", "dcutr", "relay", "identify", "macros", "noise", "yamux", "autonat"] }
libp2p-webrtc = { version = "0.9.0-alpha", features = ["tokio", "pem"] }
rand = "0.8.5"