[package]
name = "telepathy"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
messages = { path = "../messages" }
sea-codec = { path = "../sea_codec" }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
cpal = { version = "0.15", features = ["wasm-bindgen"] }
log = "0.4"
kanal = "0.1.1"
rubato = "0.16"
nnnoiseless = { version = "0.5", default-features = false }
atomic_float = "1"
flutter_rust_bridge = "=2.10.0"
parking_lot = "0.12"
lazy_static = "1"
libp2p-stream = { version = "0.3.0-alpha" }
chrono = "*"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log-panics = "2"
bincode = "2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_Graphics", "Win32_Graphics_GdiPlus", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader"] }
widestring = "1.1"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "*"
objc2-foundation = "*"

[target.'cfg(target_family = "wasm")'.dependencies]
uuid = { version = "1", features = ["v4", "js"] }
getrandom = { version = "0.2", features = ["js"] }
tokio = { version = "1", features = ["time", "io-util", "macros", "rt"] }
libp2p = { version = "0.55", features = ["quic", "ping", "dcutr", "identify", "macros", "noise", "yamux", "autonat", "relay", "wasm-bindgen"] }
libp2p-webtransport-websys = "0.5"
wasm-logger = "0.2.0"
wasmtimer = "0.4"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "AudioContext",
    "MediaDevices",
    "MediaStreamConstraints",
    "MediaStream",
    "MediaStreamAudioSourceNode",
    "AudioWorklet",
    "AudioWorkletNode",
    "BaseAudioContext",
    "MessagePort",
    "MediaStreamAudioDestinationNode",
    "MessageEvent",
    "console",
    "Url",
    "BlobPropertyBag",
    "Blob",
    "Navigator",
    "Window"
] }
js-sys = "0.3"
wasm_sync = "0.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["time", "io-util", "macros", "process", "net", "rt-multi-thread"] }
libp2p = { version = "0.55", features = ["tokio", "quic", "tcp", "ping", "dcutr", "identify", "macros", "noise", "yamux", "autonat", "relay"] }
simple-logging = "2"

[dev-dependencies]
rand = "0.8"
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
